[metadata]
name = robowatch
version = 0.1.0
description = Unified ROS2 health and debug CLI (robowatch)
long_description = file: README.md
long_description_content_type = text/markdown
author = robowatch
license = Apache-2.0
url = https://docs.ros.org/en

[options]
packages = find:
python_requires = >=3.10
install_requires =
    typer>=0.12.0
    rich>=13.7.0
    psutil>=5.9.0
    mcap>=1.0.0
entry_points =
    console_scripts =
        robowatch = robowatch.__main__:main
    ros2cli.command =
        robowatch = robowatch.ros2_command:RobowatchCommand

